core/b2b/core-services/cloudbeaver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
spec:
  selector:
    app: cloudbeaver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8978
  type: ClusterIP
